--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" sizes="180x180" href="/src/img/OS.png">
+    <link rel="shortcut icon" type="image/x-icon"  href="/favicon.ico">
     <title>Oli's Portfolio</title>
    
     
