--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/png" href="/src/assets/images/osicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" type="image/x-icon"  href="/favicon.ico">
+    <link
+      rel="shortcut icon"
+      type="image/png"
+      href="/src/assets/images/osicon.png"
+    />
     <title>Oli's Portfolio</title>
-   
-    
   </head>
   <body>
     <div id="root"></div>
